-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Sharding
-
Fully Compatible
-
ALL
-
-
Sharding 2021-04-05
-
1
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Only recipient shards construct the temporary resharding collection and replace the collection catalog entry when the resharding operation succeeds. If the primary shard for the database for the collection being resharded isn't also a recipient shard, then it won't have a collection catalog entry that's consistent with the recipient shards. It'll either
- (a) not have a collection catalog entry whatsoever if the primary shard was a donor shard, or
- (b) have an inconsistent collection UUID because it will have retained the one from before the resharding operation started.
One solution to this problem would be to have the coordinator also consider the primary shard for the database for the collection being resharded to be a recipient shard.
[js_test:resharding_allowMigrations] 2021-02-04T02:30:11.179+0000 uncaught exception: Error: [null] != [null] are equal : failed to find sharded collection after resharding : [js_test:resharding_allowMigrations] 2021-02-04T02:30:11.180+0000 doassert@src/mongo/shell/assert.js:20:14 [js_test:resharding_allowMigrations] 2021-02-04T02:30:11.180+0000 assert.neq@src/mongo/shell/assert.js:270:9 [js_test:resharding_allowMigrations] 2021-02-04T02:30:11.180+0000 @jstests/sharding/resharding_allowMigrations.js:53:1 [js_test:resharding_allowMigrations] 2021-02-04T02:30:11.180+0000 @jstests/sharding/resharding_allowMigrations.js:10:2 [js_test:resharding_allowMigrations] 2021-02-04T02:30:11.180+0000 failed to load: jstests/sharding/resharding_allowMigrations.js [js_test:resharding_allowMigrations] 2021-02-04T02:30:11.180+0000 exiting with code -3
- is related to
-
SERVER-54231 Resharding can leave behind local collection on former primary shard that doesn't own any chunks
-
- Closed
-
- related to
-
SERVER-111124 Resharding Recipient That Owns No Data Never Marks Progress When Cloning
-
- Closed
-