SERVER-54279 Add database primary as recipient in resharding